--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,8 @@
 /* FONTE DO PROJETO*/
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap');
+
 /* VARIAVEIS CSS */
 :root{
   
@@ -17,6 +19,8 @@
   --text-color: hsl(0 0% 46%);
   --text-color-light: hsl(0 0% 98%);
   --body-color: hsl(0 0% 98%);
+  --background-color-one: black;
+  --background-color-two: #191A19;
   /*fonts*/
 
   --title-font-size: 1.875rem;
@@ -24,8 +28,8 @@
 
   /*fonts*/
 
-  --title-font: 'Roboto', sans-serif;
-  --body-font: 'Roboto', sans-serif;
+  --title-font: 'Poppins', sans-serif;
+  --body-font: 'Poppins', sans-serif;
 
 
 }
@@ -33,7 +37,17 @@
 *{
   box-sizing: border-box;
   padding: 0;
-  margin: 0;
+  margin: 0; 
+}
+
+body::-webkit-scrollbar {
+   width: 8px;
+   height: 5px;
+} 
+
+body::-webkit-scrollbar-thumb {
+      background: var(--base-color-alt);
+      border-radius: 10px;
 }
 
 ul{
@@ -45,26 +59,65 @@ a{
 }
 
 body{
-  font-family: var(--body-font); 
-  width: 100%;  
+  font-family: var(--body-font);  
+  background-color: black; 
+  color: var(--text-color-light);
 }
 
-
-.wrapper {
- background-color: black;
- color: var(--text-color-light);
- min-height: 100vh;
-
- display: flex;
- align-items: center;
- justify-content: center;
-}
-
-h1:hover{
+#services i{
+  font-size: 2rem;
   color: var(--base-color-alt);
+
+}
+
+h4{
+  color: var(--base-color-alt) ;
+}
+
+#services{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.service-card-container{
+  display: flex;  
+  align-items: center; 
+  /* flex-wrap: wrap; */
+  gap: 0.8rem;
+}
+
+.service-card{
+  margin-top: 1rem;
+  background-color: #191A19;
+  height: 5rem;
+  width: 2rem; 
+  flex: 1;
+  box-shadow: 0px 4px 27px -3px #000000; 
+  padding: 1rem;  
+  border-bottom: 0.5px solid var(--base-color-alt);
+}
+
+.service-card:hover{
+  border-bottom: 0.5px solid var(--base-color-alt);
+  background-color: black;
   cursor: pointer;
 }
 
+.container {
+    width: 100%;
+    margin: 0 auto;
+    max-width: 50rem;
+    padding: 0 1rem;  
+ }
+
+
+@media (min-width: 992px){
+  .container{
+   
+  }
+}
 
 
 
