--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,6 +67,27 @@ body{
   background-color: black; 
   color: var(--text-color-light);
 }
+
+.container {
+    width: 100%;
+    margin: 0 auto;
+    max-width: 63rem;
+    padding: 0 1rem;  
+  }
+
+button {
+  padding: 0.5rem 1.2rem;
+  background-color: var(--base-color-alt);
+  border: none;
+  border-radius: 2px;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: #000000;
+  border:1px solid var(--base-color-alt);
+  color: white;
+}
 /* NAV STYLES */
 
 nav ul li {
@@ -106,6 +127,12 @@ nav ul li a.active::after{
   justify-content: space-between; 
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
+
+   margin: 0 auto;
+   max-width: 63rem;
+   padding: 0 1rem; 
+
+ 
  }
 
  .nav-links a {
@@ -117,12 +144,39 @@ nav ul li a.active::after{
  }
  .menu {
   display: flex;
-  font-size: 0.9rem;
+  font-size: 1.1rem;
 
  } 
  .menu li {
   padding: 5px 14px;
  }
+
+ /* HOME */
+
+#home{
+  display: flex;
+  align-items: center; 
+  height: 100vh;
+  gap: 4rem;
+ 
+}
+
+#home img{
+ width: 20rem;
+ height: 20rem;
+ border-radius: 50%;
+
+}
+
+#home h1{
+  color: var(--base-color-alt);
+}
+
+.home-container-img{
+  text-align: center;
+}
+
+/* SERVICES */
 
 #services i{
   font-size: 2rem;
@@ -177,7 +231,7 @@ footer{
   padding: 10px 2%;
   background-color: black;
 }
-footer .container{
+footer .footer-wrapper{
   max-width: 100%;
 }
 footer .footer-block{
@@ -224,21 +278,6 @@ footer .fa-brands{
     transition: transform .8s ease-in-out;  
 }
 /* Fim da estilização do Footer */
-
-/* Efeito Hoover */
-
-/* hover para navbar 
-.underline::before{
-  content: '';
-  position: absolute;
-  bottom: -2px;
-  right: 0;
-  width: 0;
-  height: 2px;
-  background-color: #0074D9;
-  transition: width 0.6s cubic-bezier(0.25, 1, 0.5, 1);
-}
-*/
 
 /* Efeito de Girar Social Icons */
 .fa-brands:hover {
