Criação e estilização da aba sobre (about us)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -178,6 +178,64 @@ nav ul li a.active::after{
   text-align: center;
 }
 
+/* SOBRE*/
+
+#sobre{
+  display: flex;
+  align-items: center;
+  gap: 3em;
+}
+
+.inner-container{
+  text-align: end;
+  width: 55%;
+  background-color: var(--background-color-one);
+  padding: 15px;
+}
+
+.inner-container h1{
+  margin-bottom: 30px;
+  font-size: 30px;
+  font-weight: 900;
+}
+
+.inner-container n{
+  color: var(--base-color-alt);
+}
+
+.text{
+  font-size: 13px;
+  color: var( --text-color-light);
+  line-height: 30px;
+  text-align: justify;
+  margin-bottom: 40px;
+}
+
+@media screen and (max-width:1200px){
+  .inner-container{
+      padding: 80px;
+  }
+}
+
+@media screen and (max-width:1000px){
+  .about-section{
+      background-size: 100%;
+      padding: 100px 40px;
+  }
+  .inner-container{
+      width: 100%;
+  }
+}
+
+@media screen and (max-width:600px){
+  .about-section{
+      padding: 0;
+  }
+  .inner-container{
+      padding: 60px;
+  }
+}
+
 /* SERVICES */
 
 #services i{
@@ -221,6 +279,7 @@ h4{
   cursor: pointer;
 }
 /* 
+
  /* Estilização footer */
 
  .clear{
