--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -83,9 +83,11 @@ body{
   font-weight: 900;
 }
 
-button {
+button  {
   padding: 0.5rem 1.2rem;
   background-color: var(--base-color-alt);
+  font-family: var(--body-font);  
+  font-weight: bold;
   border: none;
   border-radius: 2px;
   cursor: pointer;
@@ -98,6 +100,10 @@ button:hover{
   background-color: #000000;
   border:1px solid var(--base-color-alt);
   color: white;
+}
+
+ n{
+  color: var(--base-color-alt);
 }
 /* NAV STYLES */
 
@@ -214,12 +220,14 @@ nav ul li a.active::after{
 
 }
 
-#home h1{
-  color: var(--base-color-alt);
-}
 
 .home-container-img{
   text-align: center;
+}
+
+.home-container-button{
+  display: flex;
+  gap: 1rem;
 }
 
 .home-text{
@@ -228,6 +236,11 @@ nav ul li a.active::after{
   gap: 2rem;
 }
 
+@media (max-width:600px){
+ .home-container-img{
+   display: none;
+  }
+}
 /* SOBRE*/
 
 #sobre{
@@ -307,6 +320,7 @@ h4{
 .service-card-container{
   display: flex;  
   align-items: center; 
+  flex-direction: column;
   /* flex-wrap: wrap; */
   gap: 0.8rem;
   margin-bottom: 2rem;
@@ -318,7 +332,8 @@ h4{
   margin-top: 1rem;
   background-color: #191A19;
   padding: 1.5rem;
-  height: auto;
+  height: 100%;
+  width: 100%;
   /* width: 2rem;  */
   flex: 1;
   box-shadow: 0px 4px 27px -3px #000000; 
@@ -337,9 +352,111 @@ h4{
   color: var(--base-color-alt);
   font-weight: bold;
 }
-/* 
 
- /* Estilização footer */
+@media (min-width:1200px){
+  .service-card-container{
+    flex-direction: row;
+  }
+  .service-card{
+    height: auto;
+  }
+}
+
+/* TALENTOS */
+ 
+#talentos {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+  
+  justify-content: center;
+  gap: 2rem;
+}
+
+#talentos p{
+  
+}
+
+@media screen and (max-width:500px){
+ #talentos {
+   height: auto;
+ }
+}
+
+
+/* NÓS */
+
+#fundadores {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  margin-top: 3rem;
+  margin-bottom: 5rem;
+}
+
+.fundadores-cards-container{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-bottom: 2rem;
+  flex-wrap: wrap;
+}
+
+.fundadores-card{
+  margin-top: 1rem;
+  background-color: #191A19;
+  padding: 1.5rem;
+ 
+  border-radius: 0.5rem;
+  text-align: center;
+  /* width: 2rem;  */
+  flex: 1;
+  box-shadow: 0px 4px 27px -3px #000000; 
+  padding: 1rem;  
+  border-bottom: 0.5px solid var(--base-color-alt);
+  border-top: 0.5px solid var(--base-color-alt);
+}
+
+#fundadores img{
+  width: 7rem;
+  height: 7rem;
+  border-radius: 50%;
+}
+
+#fundadores i{
+  font-size: 1rem;
+  padding: 1rem;
+}
+
+.email{
+  font-size: 0.7rem;
+}
+
+@media (min-width:600px){
+ .fundadores-cards-container{
+   flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width:1000px){
+  #fundadores{
+    height: auto;
+  }
+  .fundadores-card{
+   height: auto;
+  }
+}
+
+@media (min-width:1000px){
+  .fundadores-cards-container{
+    flex-direction: row;
+  }
+}
+/* Estilização footer */
 
  .clear{
   clear: both;
@@ -418,6 +535,10 @@ footer .fa-brands{
   }
   #home .home-container-img{
     display: none;
+  }
+  #sobre{
+    flex-direction: column;
+    gap: 1rem;
   }
   #services{
     height: auto;
