--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,6 +70,128 @@ h1:hover{
 .clear{
   clear: both;
 }
+
+section.sessao1{
+	width: 100%;
+	background-color: black;
+	padding:0 2%;
+	height: 350px;
+  color: white;
+}
+
+section.sessao1 .container{
+  width: 100%;
+	padding:60px 2%;
+  background-color: black;
+}
+
+.texto-sessao1{
+	width: 100%;
+	padding-top: 40px;
+	padding-left: 50px;
+	color: white;
+}
+
+.texto-sessao-1 h2{
+  text-align: center;
+  padding-top: 50px;
+  padding-left: 40px;
+	font-size:  1.875rem;;
+	font-weight: 300;
+  color: hsl(var(--hue) 57% 53%);
+}
+
+.texto-sessao-1 p{
+  padding-top: 30px;
+  text-align: center;
+	font-size: 1rem;;
+  color: hsl(var(--hue) 57% 53%);
+}
+
+.texto-sessao-1 ul{
+  padding-top: 30px;
+  text-align: center;
+  font-size: 15px;
+
+  color: hsl(var(--hue) 50% 35%);
+}
+
+.texto-sessao-1 ul li{
+	width: 100%;
+	margin-top:8px;
+}
+
+
+section.contato{
+  width: 100%;
+	padding:100px 2%;
+  background-color: black;
+}
+section.contato > h2{
+	text-align: center;
+	font-size: 18px;
+  color: hsl(var(--hue) 57% 53%);
+}
+section.contato form{
+	width: 500%;
+	margin: 30px auto;
+	max-width: 500px;
+  
+}
+.form-wraper{
+	float: left;
+	padding:0 10px;
+	margin-top: 10px;
+}
+.w100{
+	width: 100%;
+}
+.w50{
+	width: 50%;
+}
+.form-wraper span{
+	font-size: 15px;
+  color: hsl(var(--hue) 57% 53%);
+}
+.form-wraper input[type=text]{
+	width: 100%;
+	height: 35px;
+	line-height: 35px;
+	padding-left: 9px;
+	font-size: 15px;
+	color: black;
+	font-weight: normal;
+	border:1px solid #dadada;
+	margin-top:8px;
+}
+.form-wraper textarea{
+	font-size: 15px;
+	width: 100%;
+	margin-top:8px;
+	padding:8px;
+	height: 121px;
+	resize: none;
+	border: 1px solid #dadada;
+}
+.form-wraper ::placeholder{
+  color: #ccc;
+}
+.form-wraper input[type=submit]{
+	width: 100px;
+	display: inline-block;
+	height: 35px;
+	border: 0;
+	background: hsl(var(--hue) 57% 53%);
+	color: black;
+	cursor: pointer;
+  -webkit-transition-duration: 0.4s; /* Safari */
+  transition-duration: 0.4s;
+}
+.form-wraper input[type=submit]:hover {
+  box-shadow: 0 12px 16px 0 rgba(0, 195, 255, 0.493),0 17px 50px 0 rgba(10, 242, 250, 0.19);
+}
+
+
 footer{
   border-top: 0.5px solid ;
   border-color: rgba(33,101,101,10);
@@ -87,14 +209,14 @@ footer .footer-block{
 .footer-block h2{
   color: hsl(var(--hue) 57% 53%);
   font-weight: normal;
-  font-size: 12px;
+  font-size: 18px;
 }
 .footer-block p, a{
   margin-top: 5px;
   padding-top: 3px;
   text-decoration: none;
   color: var(--text-color-light);
-  font-size: 8px;
+  font-size: 14px;
 }
 
 footer .social{
@@ -102,9 +224,9 @@ footer .social{
 }
 
 footer .direitos h2{
-  padding-top: 10px;
+  padding-top: 20px;
   text-align: center;
-  font-size: 6px;
+  font-size: 10px;
   color: rgba(33,101,101,10);
 }
 /*
@@ -163,7 +285,7 @@ footer .direitos h2{
 */
 
 /* Responsivo */
-@media screen and (max-width: 470px){
+@media screen and (max-width: 950px){
   footer{
 		text-align: center;
 	}
@@ -178,4 +300,10 @@ footer .direitos h2{
     padding-left: 0;
   }
   
+}
+
+@media screen and (max-width: 700px){
+  .w50{
+		width: 100%;
+	}
 }
