--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -393,15 +393,15 @@ h4{
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  margin-top: 3rem;
-  margin-bottom: 5rem;
+ 
+  
 }
 
 .fundadores-cards-container{
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-bottom: 2rem;
+ 
   flex-wrap: wrap;
 }
 
@@ -461,6 +461,56 @@ h4{
  .clear{
   clear: both;
 }
+
+section.contato{
+	padding: 30px 2%;
+}
+section.contato > h2{
+	color: #698293;
+	text-align: center;
+	font-size: 18px;
+}
+section.contato form{
+	width: 100%;
+	margin: 30px auto;
+	max-width: 500px;
+}
+.form-wraper{
+	float: left;
+	padding:0 10px;
+	margin-top: 15px;
+}
+.w100{
+	width: 100%;
+}
+.w50{
+	width: 50%;
+}
+.form-wraper span{
+	font-size: 15px;
+	color: #b4b4b4;
+}
+.form-wraper input[type=text]{
+	width: 100%;
+	height: 35px;
+	line-height: 35px;
+	padding-left: 9px;
+	font-size: 15px;
+	color: red;
+	font-weight: normal;
+	border:1px solid #dadada;
+	margin-top:8px;
+}
+.form-wraper textarea{
+	font-size: 15px;
+	width: 100%;
+	margin-top:8px;
+	padding:8px;
+	height: 121px;
+	resize: none;
+	border: 1px solid #dadada;
+}
+
 footer{
   border-top: 0.5px solid ;
   border-color: rgba(33,101,101,10);
@@ -568,7 +618,9 @@ footer .fa-brands{
   .service-card{
     width: 100%;
   }
-  
+  .w50{
+		width: 100%;
+	}
 }
 
 @media (min-width:800px){
