Tentando criar navbar responsivo

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,7 +75,7 @@ body{
     margin: 0 auto;
     max-width: var(--max-width-container);
     padding: 0 1rem;  
-  }
+}
 
 .title{
   margin-bottom: 30px;
@@ -106,6 +106,11 @@ button:hover{
   color: var(--base-color-alt);
 }
 /* NAV STYLES */
+
+.grid{
+  display: grid;
+  gap:2rem;
+}
 
 #header{
   width: 100%;
@@ -193,15 +198,18 @@ nav ul li a.active::after{
   position: relative;
 }
 
-/* Hide the links inside the navigation menu (except for logo/home) */
-/* .nav #myLinks {
-  display: none;
-} */
 
-/* Style navigation menu links */
+@media (max-width: 800px){
+  .nav-links{
+    display: none;
+  }  
+}
 
-
-
+@media (min-width: 800px){
+ #header i {
+    display: none;
+ }
+}
 
  /* HOME */
 
@@ -369,6 +377,7 @@ h4{
   display: flex;
   flex-direction: column;
   margin-bottom: 1rem;
+  margin-top: 2rem;
   
   justify-content: center;
   gap: 2rem;
@@ -378,7 +387,7 @@ h4{
   
 }
 
-@media screen and (max-width:500px){
+@media screen and (max-width:800px){
  #talentos {
    height: auto;
  }
@@ -393,15 +402,14 @@ h4{
   flex-direction: column;
   align-items: center;
   gap: 2rem;
-  margin-top: 3rem;
-  margin-bottom: 5rem;
+  margin-top: 3rem; 
+  margin-bottom: 3rem;
 }
 
 .fundadores-cards-container{
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-bottom: 2rem;
   flex-wrap: wrap;
 }
 
@@ -526,10 +534,7 @@ footer .fa-brands{
 }
 
 /* Responsivo */
-@media screen and (max-width: 470px){
-  nav ul .menu{
-    display: none;    
-  }
+@media screen and (max-width: 470px){ 
   #home{
     gap: 1rem;
   }
@@ -571,21 +576,3 @@ footer .fa-brands{
   
 }
 
-@media (min-width:800px){
-    nav .menu {
-    opacity: 1;
-    visibility: visible;
-    top: 0;
-  }
-
-  nav .menu ul{
-    display: block;
-    gap: 2rem;
-  }
-
-  
-  nav .icon {
-    display: none;
-  }
-
-}
